--- a/.golangci.yml
+++ b/.golangci.yml
@@ -50,16 +50,16 @@ linters:
       rules:
         Main:
           files:
-            - $all
-            - '!$test'
-          allow:
-            - $gostd
-        Test:
-          files:
-            - $test
-          allow:
-            - $gostd
-            - github.com/stretchr/testify
+          - $all
+          - "!$test"
+        allow:
+          - $gostd
+      Test:
+        files:
+          - $test
+        allow:
+          - $gostd
+          - github.com/stretchr/testify
     funlen:
       lines: 150
       statements: 80
